feat(): fixed order display
